Setup theme switching: Light, Dark, System

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,10 +22,10 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     /* Path alias */
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./*"
+        "./src/*"
       ]
     },
   },
