--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwind-variants": "^0.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
