--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^22.5.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.441.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
